--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         <div class="row justify-content-center mt-5">
             <div class="col-lg-10">
               <div class="row justify-content-center">
-                <div class="d-none d-lg-block d-xl-block col-lg-4 py-3">
+                <div class="d-block d-lg-block d-xl-block col-lg-4 py-3">
                   <div class="card card-body border-0 text-center shadow pt-5">
                     <div class="svg-icon mx-auto mb-4">
                       <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
