--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                       <div class="svg-icon mx-auto mb-4">
                           <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
                         </div>
-                        <h5 class="fg-gray">John Doe</h5>
+                        <h5 class="fg-gray">Jahe Doe </h5>
                         <p class="fs-small">10M Followers</p>
                         <div class="align-item-inline">
                           <a href=""><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
